--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto:100,400,500,700,900|Raleway:300,600' rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet"/>
+    <script src="https://apis.google.com/js/api:client.js"></script>
   </head>
   <body>
     <div id="app"></div>
